--- a/files/main.css
+++ b/files/main.css
@@ -139,7 +139,7 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 /*** Избранное, Сравнение, В коризну, Уведомить, Нет в наличии ***/
 [class^="add-"]:before {font-family: 'icomoon';line-height: 1;}
-.add-favorites:before {content: '\e921';}
+.add-favorites:before {content: '\e920';}
 .add-compare:before {content: '\e90c';}
 
 /*** Иконки Новинка, Хит, Скидка ***/
@@ -174,8 +174,8 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 /*** Цены ***/
 /**************************************/
-.price__old {text-decoration: line-through;color: #CBC3DB;}
-.price__now {font-size: 1.25rem;font-weight: bold;}
+.price__old {text-decoration: line-through;color: #CBC3DB;display: inline-block;}
+.price__now {font-size: 1.25rem;font-weight: bold;display: inline-block;}
 .num + span {display: none;}
 .num:after {content: "₽";line-height: 1;margin-left: 0.25rem;}
 
@@ -211,6 +211,7 @@ h6 {font-size: 0.875rem;}
 .block__title .title {font-size: 2.5rem;line-height: 1.2;font-weight: bold;}
 .block__title .subtitle {font-size: 2rem;font-weight: 600;color: #7EB8DA;margin-top: .5rem;font-family: 'Cormorant Infant', serif;}
 .block__title .pretitle {width: 44px;height: 44px;background-size: cover;margin: 0 auto;}
+.block__title .result {font-size: 1.5rem;display: none;}
 #page__title {margin-bottom: 2rem;}
 #page__title .block__title {margin-bottom: .75rem;}
 /* Блок Заголовков. Адаптивность */
@@ -400,17 +401,18 @@ h6 {font-size: 0.875rem;}
 .page-feedback .maps {width: 100%;margin-top: 2rem;}
 /* Страница: Связь с администрацией. Контакты */
 .page-feedback .contacts__content {margin: 0;padding: 0;list-style: none;width: 100%;}
-.page-feedback .contacts__block {margin-bottom: 2rem;width: 100%;}
-.page-feedback .contacts__block label {display: none;}
-.page-feedback .contacts__block-link {white-space: normal;max-width: 100%;}
+.page-feedback .contacts__block {margin-bottom: 1rem;width: 100%;}
+/* .page-feedback .contacts__block label {display: none;} */
+.page-feedback .contacts__block-link {white-space: normal;max-width: 100%;display: block;}
 .page-feedback .contacts__block-link + .contacts__block-link {margin-top: .5rem;}
+.page-feedback .contacts__block-content {width: calc(100% - 102px);margin: 0;padding-left: 2rem;text-align: left;}
 
 
 /**************************************/
 /*** Страницы новостей ***/
 /**************************************/
 /*** Страница: Список новостей ***/
-.news__list .news__item {margin-bottom: 2rem;padding: 1rem;border: 1px solid #CBC3DB;}
+.news__list .news__item {margin-bottom: 2rem;padding: 1rem;border: 4px solid #E3DDEE;border-radius: 1.25rem;background-color: #ffffff;}
 .news__list .news__item:last-child {margin-bottom: 0;}
 .news__list .news__title {margin: 0 0 1rem 0;font-weight: bold;display: block;}
 .news__list .news__text {word-break: break-all;font-size: 0.875rem;}
@@ -639,7 +641,7 @@ h6 {font-size: 0.875rem;}
 #menu .catalog__link[data-level="1"] {font-weight: bold;}
 #menu .catalog__link[data-level="2"] {color:#776994;padding: .5rem .25rem;}
 #menu .catalog__link[data-level="2"]:hover {color:#FFA5D8;}
-#menu .catalog__item.hovered .catalog__link {background: #FFA5D8;color: #ffffff;padding: .75rem 1.25rem;}
+#menu .catalog__item.hovered .catalog__link {background: #FFA5D8;color: #ffffff;padding: 1rem 1.25rem;}
 #menu .catalog__item[data-level="0"].parent .open {line-height: 1;font-size: .75rem;right: 2rem;position: absolute;}
 #menu .catalog__item[data-level="0"].parent .open:before {content: '\e903';font-family: 'icomoon';}
 #menu .catalog__item[data-level="0"].parent .open.opened:before {content: '\e901';}
@@ -658,6 +660,15 @@ h6 {font-size: 0.875rem;}
 #menu .catalog__image {display: none;}
 #menu .catalog__sub-label-close {font-size: 1rem;color: #CBC3DB;position: absolute;right: 24px;top: 26px;cursor: pointer;}
 #menu .catalog__sub-label-close:hover {color:#FFA5D8;}
+@media (max-width: 639px) {
+	.catalog__icon {width: 66px;height: 66px;font-size: 30px;}
+	#menu .catalog__sub-label {background-color: #FFA5D8;color: #ffffff;padding: .75rem 1.25rem;}
+	#menu .catalog__sub-label-close {color: #ffffff;top: 22px;}
+}
+@media (max-width: 479px) {
+	#menu {margin-top: 1rem;}
+	#menu .catalog__sub-level-0 {width: 100%;}
+}
 
 /** Меню. Меню **/
 #menu .menu {width: 100%;position: relative;padding: 0 270px 0 120px;}
@@ -672,6 +683,12 @@ h6 {font-size: 0.875rem;}
 .overflowMenu .mainnav__list-link span:after {display: none;}
 .mainnav__more i {margin-left: .5rem;font-size: .75rem;vertical-align: middle;color: #CBC3DB;}
 .overflowMenu.dropdown__content {right: 270px;}
+@media (max-width: 991px) {
+	#menu .menu {padding-right: 240px;}
+}
+@media (max-width: 767px) {
+	#menu .menu {display: none;}
+}
 
 /** Меню. Поиск **/
 .search {width: 260px;right: 5px;position: absolute;transition: all 0.3s ease;}
@@ -682,6 +699,20 @@ h6 {font-size: 0.875rem;}
 .search__filled .search__reset {opacity: 1;}
 .search__loading .lds-ring {display: block;}
 .lds-ring {display: none;position: absolute;top: 1rem;right: 50px;width: 1rem;height: 1rem;}
+/*** Меню. Поиск. Адаптивность ***/
+@media (min-width: 640px) {
+	.search.search__focused, .search.search__filled {width: calc(100% - 120px);}
+}
+@media (max-width: 991px) {
+	.search {width: 230px;}
+}
+@media (max-width: 639px) {
+	.search {width: calc(100% - 76px);}
+	.search__submit {left: auto;right: 5px;}
+	.search__input {padding: 0 55px 0 20px;}
+	.search__reset {right: 55px;}
+	.lds-ring {right: 80px;}
+}
 
 /** Результаты поиска **/
 #search__result {padding: 1.25rem;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 1rem;z-index: 3;position: absolute;right: 0;top: 4rem;width: 100%;}
@@ -695,31 +726,6 @@ h6 {font-size: 0.875rem;}
 .result__goods .result__image {width: 6rem;height: 6rem;}
 .result__goods .result__name {width: calc(100% - 6rem);padding: 0 1rem;}
 .result__showAll {text-align: center;margin-top: 1.5rem;}
-
-/*** Меню. Адаптивность ***/
-@media (min-width: 640px) {
-	.search.search__focused, .search.search__filled {width: calc(100% - 120px);}
-}
-@media (max-width: 991px) {
-	.search {width: 230px;}
-	#menu .menu {padding-right: 240px;}
-}
-@media (max-width: 767px) {
-	#menu .menu {display: none;}
-}
-@media (max-width: 639px) {
-	.catalog__icon {width: 66px;height: 66px;font-size: 30px;}
-	.search {width: calc(100% - 76px);}
-	.search__submit {left: auto;right: 5px;}
-	.search__input {padding: 0 55px 0 20px;}
-	.search__reset {right: 55px;}
-	.lds-ring {right: 80px;}
-	#menu .catalog__sub-label {background-color: #FFA5D8;color: #ffffff;padding: .75rem 1.25rem;}
-	#menu .catalog__sub-label-close {color: #ffffff;top: 22px;}
-}
-@media (max-width: 479px) {
-	#menu {margin-top: 1rem;}
-}
 
 
 /**************************************/
@@ -835,6 +841,7 @@ h6 {font-size: 0.875rem;}
 	.tick .tick-flip-panel-text-wrapper {font-size: 2rem;}
 }
 
+
 /**************************************/
 /*** Промо слайдер ***/
 /**************************************/
@@ -847,7 +854,7 @@ h6 {font-size: 0.875rem;}
 .promo__title {font-size: 2.5rem;font-weight: bold;}
 .promo__subtitle {font-size: 1rem;margin-top: .5rem;}
 .promo__content {padding: 0 1.25rem;width: calc(100% - 100px);}
-/*** . Адаптивность ***/
+/*** Промо. Адаптивность ***/
 @media (max-width: 991px) {
 	.promo__title {font-size: 2rem;}
 	.promo__item {padding: 1.5rem;}
@@ -882,7 +889,7 @@ h6 {font-size: 0.875rem;}
 
 
 /**************************************/
-/*** Промо слайдер ***/
+/*** Заказать звонок ***/
 /**************************************/
 .callback__inner {align-items: center;justify-content: space-between;}
 .callback__item {width: calc(33.333333% - 1rem);justify-content: flex-end;flex-direction: column;align-items: flex-start;height: 406px;background-color: #ffffff;border-radius: 1.5rem;background-repeat: no-repeat;background-size: cover;position: relative;}
@@ -899,7 +906,7 @@ h6 {font-size: 0.875rem;}
 .callback__item-callback .pretitle {margin: .5rem auto 0;}
 .callback__item-callback .callback__subtitle {font-size: 1rem;margin-top: 1rem;}
 .callback__item-callback .form__button {width: 100%;}
-/*** . Адаптивность ***/
+/*** Заказать звонок. Адаптивность ***/
 @media (max-width: 1199px) {
 	.callback__item {order: 2;width: calc(50% - .5rem);height: 300px;}
 	.callback__item-callback {order: 1;width: 100%;margin-bottom: 1rem;height: 300px;}
@@ -990,10 +997,10 @@ h6 {font-size: 0.875rem;}
 .footer__icons a svg {fill: #CBC3DB;width: 1.5rem;height: 1.5rem;transition: all 0.3s ease;}
 .footer__icons a:hover svg {fill: #FFA5D8;}
 .footer__icons a span {display: none;}
-/*** . Адаптивность ***/
+/*** Подвал. Адаптивность ***/
 @media (min-width: 992px) {
-	.contacts__block:nth-child(2) {margin-top: 60px;}
-	.contacts__block:nth-child(3) {margin-top: 60px;}
+	#footer .contacts__block:nth-child(2) {margin-top: 60px;}
+	#footer .contacts__block:nth-child(3) {margin-top: 60px;}
 }
 @media (max-width: 1199px) {
 	.footer__menu {padding: 0 2rem;}
@@ -1056,10 +1063,11 @@ h6 {font-size: 0.875rem;}
 /* Кнопки Избр и Сравнения */
 .products__grid .product__links {margin: -3.5rem 0 .5rem;justify-content: center;align-items: flex-end;position: relative;z-index: 2;}
 .products__grid .product__links a {opacity: 0;margin: 0 4px;width: 40px;height: 40px;line-height: 40px;font-size: 18px;color: #FFA5D8;border: 2px solid #FFA5D8;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;transition: all 0.3s ease;position: relative;}
-.products__grid .product__links a:hover {color: #ffffff;border-color: #ffffff;}
+.products__grid .product__links a:hover, .products__grid .product__links a.added {color: #ffffff;border-color: #ffffff;}
 .products__grid .product__links a.add-compare {transform: translateX(100%);}
 .products__grid .product__links a.add-favorites {transform: translateX(-100%);}
 .products__grid .product__item:hover .product__links a {opacity: 1;transform: translateX(0);}
+.products__grid .product__links a.added:hover {color: #FFA5D8;border-color: #FFA5D8;}
 /* Добавление в корзину */
 .products__grid .product__addCart a {opacity: 1;width: 54px;height: 54px;line-height: 54px;font-size: 24px;color: #ffffff;border: 4px solid #FFFFFF;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;}
 .products__grid .product__addCart a:hover {box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);}
@@ -1067,8 +1075,10 @@ h6 {font-size: 0.875rem;}
 .products__grid .product__addCart a span {display: none;}
 /* Анимация для кнопок */
 .products__grid .product__links a:after {content: "";background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);position: absolute;z-index: -1;top: 0;left: 0;right: 0;bottom: 0;overflow: hidden;-webkit-transform: scaleX(0);-moz-transform: scaleX(0);-o-transform: scaleX(0);-ms-transform: scaleX(0);transform: scaleX(0);-webkit-transform-origin: 0 50%;transform-origin: 0 50%;-webkit-transition-property: transform;transition-property: transform;-webkit-transition-duration: 0.3s;transition-duration: 0.3s;-webkit-transition-timing-function: ease-out;transition-timing-function: ease-out;border-radius: 100%;-moz-border-radius: 100%;-webkit-border-radius: 100%;-khtml-border-radius: 100%;}
-.products__grid .product__links a:hover:after {-webkit-transform: scale(1);-moz-transform: scale(1);-o-transform: scale(1);-ms-transform: scale(1);transform: scaleX(1);}
-.products__grid .product__addCart a:hover:after {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
+.products__grid .product__links a:hover:after, .products__grid .product__links a.added:after {-webkit-transform: scale(1);-moz-transform: scale(1);-o-transform: scale(1);-ms-transform: scale(1);transform: scaleX(1);}
+.products__grid .product__addCart a:hover:after, .products__grid .product__addCart a.added:after {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
+.products__grid .product__addCart a.added:hover:after {background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);}
+.products__grid .product__links a.added:hover:after {-webkit-transform: scale(0);-moz-transform: scale(0);-o-transform: scale(0);-ms-transform: scale(0);transform: scaleX(0);}
 /*** Товары. Адаптивность ***/
 @media (max-width: 1199px) {
 	.products__grid {grid-template-columns : repeat(3, 1fr);}
@@ -1234,7 +1244,6 @@ h6 {font-size: 0.875rem;}
 	#pdt__catalog .owl-item.active + .active + .active + .active {margin-top: 2rem;}
 	#pdt__catalog .owl-item.active + .active + .active + .active + .active {margin-top: 0;}
 }
-
 @media (max-width: 479px) {
 	#pdt__catalog .owl-nav {margin: 0 auto;}
 }
@@ -1422,11 +1431,10 @@ h6 {font-size: 0.875rem;}
 .toolbar [class*="-by"]:last-child {margin-right: 0;}
 .toolbar-bottom {margin-top: 1.5rem;}
 .total-by {font-size: 1rem;font-weight: bold;}
-
 .view-by {flex-grow: 1;justify-content: flex-end;}
 .view__icon {margin-left: 10px;font-size: 22px;color: #CBC3DB;}
 .view__icon.active {cursor: default;}
-
+/*** Тулбар. Адаптивность ***/
 @media (max-width: 991px) {
 	.total-by {display: none;}
 }
@@ -1440,14 +1448,12 @@ h6 {font-size: 0.875rem;}
 	.view__icon:nth-child(2) {display: none;}
 }
 
-
 /*** Активные фильтры ***/
 .filtersActive {margin-bottom: 1rem;display: none;}
 .filtersActive .has-filters {display: block;}
 .filtersActive__title {justify-content: space-between;font-size: 1rem;font-weight: bold;}
 .filtersActive__span {color: #CBC3DB;}
 .filtersActive__clear {color: #DE4F8B;}
-
 
 
 /**************************************/
@@ -1507,7 +1513,7 @@ h6 {font-size: 0.875rem;}
 .productView__addto .button + .button {margin-left: 1rem;}
 .productView__addto .button i {display: none;}
 .productView__addto .quick {flex-grow: .5;}
-/*** . Адаптивность ***/
+/*** Товар. Адаптивность ***/
 @media (max-width: 1199px) {
 	.productView__images {width: 100%;position: relative;top: auto;}
 	.productView__shop {width: 100%;padding: 20px 0 0 0;}
@@ -1627,11 +1633,6 @@ h6 {font-size: 0.875rem;}
 .productViewMod .productView__text {display: none;}
 
 
-
-
-
-
-
 /**************************************/
 /*** Корзина ***/
 /**************************************/
@@ -1723,6 +1724,7 @@ h6 {font-size: 0.875rem;}
 	.cart__clear span {display: none;}
 }
 
+
 /**************************************/
 /*** Быстрый заказ ***/
 /**************************************/
@@ -1734,6 +1736,7 @@ h6 {font-size: 0.875rem;}
 .fastOrderForm .row {margin: 0 -.5rem;}
 .fastOrderForm .block__title {margin-bottom: 1rem;}
 .fastOrderForm .form__field {margin: 0 .5rem;width: calc(33.333333% - 1rem);flex-grow: 1;}
+.fastOrderForm .form__field + .form__field {margin-top: 0;}
 .fastOrderForm .form__registration {padding: 0 1rem;margin-bottom: 0;}
 .fastOrderForm .form__registration label {margin: 0;display: inline-block;width: calc(100% - 24px);}
 .fastOrderForm .form__pass {margin: 1rem 1rem 0 1rem;}
@@ -1743,6 +1746,7 @@ h6 {font-size: 0.875rem;}
 .delivery__description {margin-top: .75rem;}
 .payment__description {margin-top: .75rem;}
 .fastOrderForm .comment .form__field {margin: 0;width: 100%;}
+.coupon__order {position: relative;}
 .coupon__button {position: absolute;right: 0;}
 .coupon__button i {display: none;}
 .fastOrder__title.title {font-size: 2rem;display: flex;align-items: center;justify-content: center;}
@@ -1778,6 +1782,50 @@ h6 {font-size: 0.875rem;}
 }
 
 
+
+/**************************************/
+/*** Страница: Акции ***/
+/**************************************/
+.promotion__grid {grid-template-columns: repeat(3, 1fr);}
+.promotion__item {text-align: center;padding: 6rem 1.25rem 1.25rem 1.25rem;margin-top: 5rem;}
+.promotion__name {font-size: 2rem;font-weight: 600;font-family: 'Cormorant Infant', serif;margin-bottom: 1rem;display: block;line-height: 1;}
+.promotion__desc {margin-bottom: 1.5rem;font-size: 1rem;}
+.promotion__percentage {left: calc(50% - 70px);top: -70px;font-size: 3rem;line-height: 1;color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);outline: 1rem solid rgba(255, 165, 216, 0.2);width: 140px;height: 140px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;font-family: 'Cormorant Infant', serif;}
+.promotion__empty .promotion__percentage {background: #CBC3DB;}
+/** Просмотр Акции **/
+.promotion__container {margin-bottom: 2rem;padding: 1rem;border: 4px solid #E3DDEE;border-radius: 1.25rem;background-color: #ffffff;}
+.promotion__content {margin-bottom: 1rem;}
+.promotion__content strong {margin: 0 .25rem;}
+.promotion__text {margin-top: 1rem;}
+.promotion__date-expired {color: #70787D;}
+@media (max-width: 991px) {
+	.promotion__grid {grid-template-columns: repeat(2, 1fr);}
+}
+@media (max-width: 639px) {
+	.promotion__grid {grid-template-columns: repeat(1, 1fr);}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**************************************/
 /*** Фоновые изображения ***/
 /**************************************/
@@ -1791,6 +1839,9 @@ h6 {font-size: 0.875rem;}
 .overlay-footer {top: -110%;left: -10%;width: 120%;height: 175%;border-radius: 0 0 100% 100%;background: #F8F1F5;position: absolute;}
 .overlay-center {background-image: url('{ASSETS_IMAGES_PATH}bg_3.png?design=THEMENAME');}
 .overlay-center {bottom: -80%;left: 0;width: 100%;height: 936px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
+@media (max-width: 479px) {
+	.overlay-preheader {height: 286px;}
+}
 
 
 /**************************************/
