--- a/files/main.css
+++ b/files/main.css
@@ -325,7 +325,7 @@ h6 {font-size: 0.875rem;}
 /*** Выпадающее обхекты ***/
 /**************************************/
 .dropdown {position: relative;}
-.dropdown__content {display: none;max-width: 28rem;margin-top: -1px;padding: 2rem;right: 0;top: 4rem;height: auto;background: #ffffff;border: 1px solid #CBC3DB;border-radius: 1rem;position: absolute;z-index: 11;transition: all 0.3s ease-in-out;}
+.dropdown__content {display: none;max-width: 28rem;margin-top: -1px;padding: 2rem;right: 0;top: 4rem;height: auto;background: #ffffff;border: 0;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 1rem;position: absolute;z-index: 11;transition: all 0.3s ease-in-out;}
 .opened .dropdown__content, .dropdown__content.opened {display: block;}
 .dropdown__open {position: relative;cursor: pointer;}
 @media all and (min-width: 768px) {
@@ -676,7 +676,7 @@ h6 {font-size: 0.875rem;}
 .mainnav__list li {position: relative;display: inline-block;}
 .mainnav__list-link {margin: 20px 10px;font-size: 1rem;line-height: 20px;display: block;text-align: center;}
 .mainnav__list-link span {position: relative;}
-.mainnav__list-link span:after {content: '';position: absolute;bottom: -24px;left: 0;width: 0%;height: .25rem;background-color: #FFA5D8;border-radius: 3px;transition: all 0.3s ease;}
+.mainnav__list-link span:after {content: '';position: absolute;bottom: -21px;left: 0;width: 0%;height: .25rem;background-color: #FFA5D8;border-radius: 3px;transition: all 0.3s ease;}
 .mainnav__list-link:hover span:after, #menu .mainnav__list-link.active span:after {width: 100%;}
 .mainnav__list-link:hover, .mainnav__list-link.active {color: #FFA5D8;}
 .overflowMenu .mainnav__list-link {margin: 1rem 1.5rem;}
@@ -692,17 +692,18 @@ h6 {font-size: 0.875rem;}
 }
 
 /** Меню. Поиск **/
-.search {width: 260px;right: 5px;position: absolute;transition: all 0.3s ease;}
+.search {width: 260px;right: 0;border: 5px solid #ffffff;border-radius: 40px;position: absolute;transition: all 0.3s ease;}
 .search__form {position: relative;width: 100%;}
 .search__input {border: 0;padding: 0 0 0 55px;height: 50px;background-color: #F9F6FF;}
 .search__submit {background:  #FFA5D8;width: 40px;height: 40px;line-height: 44px;padding: 0;text-align: center;position: absolute;left: 5px;top: 5px;}
-.search__reset {opacity: 0;position: absolute;right: 20px;line-height: 50px;}
+.search__submit:hover {background: #9579D1;}
+.search__reset {opacity: 0;position: absolute;right: 20px;line-height: 50px;color: #CBC3DB;}
 .search__filled .search__reset {opacity: 1;}
 .search__loading .lds-ring {display: block;}
 .lds-ring {display: none;position: absolute;top: 1rem;right: 50px;width: 1rem;height: 1rem;}
 /*** Меню. Поиск. Адаптивность ***/
 @media (min-width: 640px) {
-	.search.search__focused, .search.search__filled {width: calc(100% - 120px);}
+	.search.search__focused, .search.search__filled {width: calc(100% - 104px);}
 }
 @media (max-width: 991px) {
 	.search {width: 230px;}
@@ -734,7 +735,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 #slideshow.loading {height: 580px;}
 #slideshow .owl-dots {position: absolute;}
-#slideshow .owl-nav {position: absolute;bottom: 24px;right: 212px;width: 130px;margin: 0;}
+#slideshow .owl-nav {position: absolute;bottom: 40px;right: 210px;width: 130px;margin: 0;}
 #slideshow .owl-nav:before {display: none;}
 #slideshow .owl-prev, #slideshow .owl-next {width: 60px;height: 60px;background: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);}
 .slideshow__inner {position: relative;}
@@ -849,7 +850,7 @@ h6 {font-size: 0.875rem;}
 #promo.loading {height: 156px;}
 #promo .owl-dots {position: absolute;bottom: 10px;width: 100%;text-align: center;}
 #promo .owl-dot {display: inline-block;}
-.promo__item {padding: 2.5rem;background-color: #ffffff;border-radius: 1.5rem;background-repeat: no-repeat;background-size: cover;}
+.promo__item {padding: 1.875rem;background-color: #ffffff;border-radius: 1.5rem;background-repeat: no-repeat;background-size: cover;}
 .promo__icon {font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);width: 100px;height: 100px;border-radius: 100%;text-align: center;flex-direction: column;}
 .promo__price {font-size: 2rem;font-family: 'Cormorant Infant', serif;}
 .promo__title {font-size: 2.5rem;font-weight: bold;}
@@ -1255,20 +1256,19 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 /**************************************/
 /*** Категории ***/
 /**************************************/
-.categories__list {display: grid;gap: 20px;grid-template-columns: repeat(4, 1fr);}
-.categories__image {width: 268px;height: 268px;margin: 0 auto;background-color: #ffffff;border-radius: 100%;border: 1rem solid rgba(126, 184, 218, 0.2);}
+.categories__list {display: grid;gap: 20px;grid-template-columns: repeat(6, 1fr);}
+.categories__image {width: 168px;height: 168px;margin: 0 auto;background-color: #ffffff;border-radius: 100%;border: 1rem solid rgba(126, 184, 218, 0.2);}
 .categories__image img {border-radius: 100%}
 .categories__name {margin-top: 16px;font-size: 18px;text-align: center;display: block;}
 /*** Категории. Адаптивность ***/
 @media (max-width: 1199px) {
-	.categories__list {grid-template-columns: repeat(3, 1fr);}
-	.categories__image {width: 296px;height: 296px;}
+	.categories__list {grid-template-columns: repeat(5, 1fr);}
 }
 @media (max-width: 991px) {
-	.categories__image {width: 232px;height: 232px;}
+	.categories__list {grid-template-columns: repeat(4, 1fr);}
 }
 @media (max-width: 767px) {
-	.categories__image {width: 194px;height: 194px;}
+	.categories__list {grid-template-columns: repeat(3, 1fr);}
 }
 @media (max-width: 639px) {
 	.categories__list {grid-template-columns: repeat(2, 1fr);}
@@ -1300,7 +1300,7 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 #pdt__sales .product__item {border-radius: 0 20px 20px 0;border: 0;}
 #pdt__sales .product__image {width: 260px;}
 #pdt__sales .product__shop {width: calc(100% - 260px);padding: 1rem;}
-#pdt__sales .product__name {font-size: 1.25rem;max-height: 3.25rem;height: auto;margin: 1rem 0;display: block;overflow: hidden;}
+#pdt__sales .product__name {font-size: 1.25rem;height: 3.25rem;margin: 1rem 0;display: block;overflow: hidden;}
 #pdt__sales .product__price {margin: 1rem 0;}
 #pdt__sales .product__addto i {display: none;}
 #pdt__sales .product__addCart {margin-right: 5px;}
@@ -1416,6 +1416,7 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 #viewed .product__img {height: 164px;}
 #viewed .product__name {font-size: 14px;height: 52px;}
 #viewed .price__old {display: none;}
+#viewed .product__available {display: none;}
 @media (max-width: 374px) {
 	#viewed .product__links a {display: none;}
 	#viewed .product__addCart a {display: inline-block;}
@@ -1537,7 +1538,7 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 .productView__icon span {display: block;margin-top: .5rem;}
 /* Товар. Наличие */
 .productView__available.empty {color: #DE4F8B;}
-.productView__available.alot {color: #9579D1;}
+.productView__available.alot {color: #79D19C;}
 .productView__available.few {color: #7EB8DA;}
 /* Товар. Средний рейтинг */
 .productView__ratings {position: relative;}
@@ -1690,6 +1691,15 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 .productViewMod .productView__images {display: none;}
 .productViewMod .productView__shop {width: 100%;padding: 0;}
 .productViewMod .productView__text {display: none;}
+/*** Товар. Адаптивность ***/
+@media (max-width: 1199px) {
+	.fancybox-content .productView__shop {padding: 0 0 0 20px;}
+}
+@media (max-width: 767px) {
+	.fancybox-content .productView__images {width: 100%;}
+	.fancybox-content .productView__shop {width: 100%;padding: 20px 0 0 0;}
+	.fancybox-content .thumblist {display: none;}
+}
 
 
 /**************************************/
@@ -1923,9 +1933,9 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 /**************************************/
 /*** Анимация пульсации ***/
 /**************************************/
-.pulse {border-radius: 50%;box-shadow: 0 0 0 rgba(126, 184, 218, 0.4);}
+.pulse {border-radius: 100%;box-shadow: 0 0 0 rgba(126, 184, 218, 0.4);}
 .pulse:hover, div:hover > .pulse, a:hover > .pulse {animation: pulse 2s infinite;}
-.pulse2 {border-radius: 50%;box-shadow: 0 0 0 rgba(255, 165, 216, 0.4);}
+.pulse2 {border-radius: 100%;box-shadow: 0 0 0 rgba(255, 165, 216, 0.4);}
 .pulse2:hover, div:hover > .pulse2, a:hover > .pulse2 {animation: pulse2 2s infinite;}
 
 @-webkit-keyframes pulse {
